# project-repository-mbsolo2

./: .gitignore  plan.md  pyproject.toml
app/: main.py
app/api/routers/: inventory.py  mealplan.py
app/db/: engine.py  models.py  session.py
app/schemas/: inventory.py  mealplan.py  recipe.py
app/services/: classifiers.py  expiration_service.py  inventory_service.py  mealplan_service.py  recipe_provider.py  scoring.py
docs/: prompt.md  spec.md
tests/: conftest.py  test_classifiers.py  test_db_session.py  test_expiration_service.py  test_health.py  test_inventory_api_delete.py  test_inventory_api_get.py  test_inventory_api_post.py  test_inventory_model_crud.py  test_inventory_service_add.py  test_mealplan_generate_api.py  test_recipe_provider_stub.py  test_scoring.py
